# 1080SnowBoarding

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md  plugins.cfg  resources.cfg
assets/: Ground.material  Penguin.mtl  Skybox.material  a.py  basics.material  map.csv  tree.mtl
assets/map/: ex_height_plotter.py  map.csv  map.py  mapa_test.py  mountain-v2.py  mountain-v5.py  mountain.py  pista_con_acera.csv  show.py  show_vertices.py  terreno_montana.csv  visualizar_terreno.py
src/: audioManager.cpp  audioManager.h  main.cpp  ramp.cpp  ramp.h  rider.cpp  rider.h  tree.cpp  tree.h  utils.cpp  utils.h
